--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "react-dom": "17.0.1",
     "remark": "^12.0.0",
     "remark-html": "^12.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.12",
+    "typescript": "^4.3.5"
   }
 }
